--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "androidtoolvuex",
+  "name": "androidtoolkit",
   "version": "0.1.0",
+  "license": "Apache-2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -14,6 +15,8 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "electron-root-path": "^1.0.16",
+    "electron-store": "^7.0.2",
     "vue": "^2.6.11",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
